--- a/dapp/src/app/globals.css
+++ b/dapp/src/app/globals.css
@@ -72,4 +72,27 @@ body {
   25% { transform: rotate(90deg)}
   75%{ transform: rotate(-90deg)}
 }
-  
+
+/* styles.css or your global styles */
+/* Target all scrollbars */
+::-webkit-scrollbar {
+  width: 8px; /* Customize the scrollbar width */
+  margin-right: 8px; /* Add margin to the right */
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background-color: transparent; /* Customize the scrollbar track color */
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background-color: #ccc; /* Customize the scrollbar thumb color */
+  border-radius: 4px; /* Customize the scrollbar thumb border-radius for an elegant look */
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background-color: #aaa; /* Customize the scrollbar thumb color on hover */
+}
+
