--- a/dapp/src/app/globals.css
+++ b/dapp/src/app/globals.css
@@ -96,3 +96,13 @@ body {
   background-color: #aaa; /* Customize the scrollbar thumb color on hover */
 }
 
+
+
+.right-slide-in {
+  transition: transform 0.3s ease-in-out;
+  transform: translateX(100%);
+}
+
+.right-slide-in.visible {
+  transform: translateX(0);
+}
